Spacing/sizing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,6 @@
   height: auto;
   width: 80%;
   margin: auto;
-
   margin-bottom: 20px;
   padding: 20px;
   display: flex;
@@ -174,6 +173,7 @@ body {
 #content {
   z-index: -1;
   position: absolute;
+  width: 95%;
   max-width: var(--max-width);
   margin: auto;
   margin-top: 100px;
