--- a/pages/experience/experience.css
+++ b/pages/experience/experience.css
@@ -3,13 +3,18 @@
     opacity: 100%;
 }
 
+#experience-container{
+  width: 100%;
+  height: auto;
+}
+
 /* Items */
 .experience-item {
     background-color: var(--secondary-light);
+    color: var(--primary-dark);
     height: auto;
     font-size: 13pt;
     padding: 20px;
-    margin-top: 20px;
     opacity: 0;
     display: flex;
     flex-direction: row;
@@ -19,7 +24,11 @@
     animation-duration: 1s;
     animation-fill-mode: forwards;
   }
-
+  .exp-attribute::before{
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: -30%;
+  }
   .exp-title {
     font-weight: bold;
     font-size: 16pt;
@@ -29,6 +38,7 @@
   }
   .exp-time{
     font-size: 16pt;
+    width: 250px;
   }
   .exp-employer::before{
     content: url('/images/icons/person.svg');
